add asterisk id support