@@ -1,6 +1,10 @@
 package mibs.asterisk.control.controllers;
 
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.sql.Connection;
@@ -12,6 +16,10 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,14 +34,27 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
+import com.jcraft.jsch.Channel;
+import com.jcraft.jsch.ChannelExec;
+import com.jcraft.jsch.JSch;
+import com.jcraft.jsch.JSchException;
+import com.jcraft.jsch.Session;
+import com.jcraft.jsch.UserInfo;
+
+
 import mibs.asterisk.control.config.AppConfig;
 import mibs.asterisk.control.dao.ActionResult;
+import mibs.asterisk.control.dao.Configuration;
 import mibs.asterisk.control.dao.Equipments;
+import mibs.asterisk.control.dao.Pbx;
 import mibs.asterisk.control.dao.Units;
 import mibs.asterisk.control.dao.Users;
+import mibs.asterisk.control.entity.ConfigurationEntity;
 import mibs.asterisk.control.entity.EquipmentsEntity;
 import mibs.asterisk.control.entity.UnitsEntity;
 import mibs.asterisk.control.entity.UserEntity;
+import mibs.asterisk.control.exception.CopyConfigException;
+import mibs.asterisk.control.repository.ConfigurationRepository;
 import mibs.asterisk.control.repository.EquipmentsRepository;
 import mibs.asterisk.control.repository.UnitsRepository;
 import mibs.asterisk.control.service.UsersDetails;
@@ -41,10 +62,9 @@ import mibs.asterisk.control.utils.FSContainer;
 import mibs.asterisk.control.utils.PNameQ;
 
 @Controller
-public class UnitsController extends AbstractController{
+public class UnitsController extends AbstractController {
 
 	static Logger logger = LoggerFactory.getLogger(UnitsController.class);
-	
 
 	@Value("${spring.datasource.url}")
 	private String datasourceUrl;
@@ -52,7 +72,7 @@ public class UnitsController extends AbstractController{
 	private String username;
 	@Value("${spring.datasource.password}")
 	private String password;
-	
+
 	private Connection connect = null;
 
 	@Autowired
@@ -61,26 +81,65 @@ public class UnitsController extends AbstractController{
 	private UnitsRepository unitsRepository;
 	@Autowired
 	private EquipmentsRepository equipmentsRepository;
+	@Autowired
+	private ConfigurationRepository configurationRepository;
+
+	private String host;
+	private String user;
+	private String passwd;
+
 	
-	@RequestMapping(value = { "/sendFileToAsterisk" },method = {RequestMethod.POST})
-	public @ResponseBody String sendFileToAsterisk() {
-		
-		
-		
+
+	
+	@RequestMapping(value = { "/sendFileToAsterisk" }, method = { RequestMethod.POST })
+	public @ResponseBody String sendFileToAsterisk(@RequestBody Pbx pbx) {
+
+		final Configuration config = new Configuration();
+		try {
+			Optional<ConfigurationEntity> opt = configurationRepository.findById(pbx.getId());
+			if (!opt.isPresent())
+				return "ERROR_FILE_SENDING";
+
+			ConfigurationEntity conf = opt.get();
+			ExecutorService service = null;
+			service = Executors.newSingleThreadExecutor();
+			Future<Integer> future = service.submit(() -> {
+				
+				//copySIPConfig(conf.getSshlogin(), conf.get, int port, String password, String known_host, String lfile, String rfile)
+				return 1;
+			});
+
+			int result = future.get();
+
+		} catch (Exception e) {
+			logger.error(e.getMessage());
+			return "ERROR_FILE_SENDING";
+		}
+
+	/*	
+		config.setId(entity.getId());
+		config.setAstname(entity.getAstname());
+		config.setDbhost(entity.getDbhost());
+		config.setDbname(entity.getDbname());
+		config.setDbuser(entity.getDbuser());
+		config.setDbpassword(entity.getDbpassword());
+		config.setSshlogin(entity.getSshlogin());
+		config.setSshpassword(entity.getSshpassword());
+*/
 		return "FILE_SENDED_SUCCESSFULY";
-		
+
 	}
-	
-	
-	@RequestMapping(value = { "/createSipConf" },method = {RequestMethod.POST})
+
+	@RequestMapping(value = { "/createSipConf" }, method = { RequestMethod.POST })
 	public @ResponseBody String createSipConf() {
-		
+
 		LocalDateTime ld = LocalDateTime.now();
 		final StringBuilder sb = new StringBuilder();
 		List<EquipmentsEntity> entity = equipmentsRepository.findAll();
 		sb.append(config.getConfigheader() + "\n");
-		sb.append("; Asterisk Control sip.cong file, created at " + ld.getDayOfMonth() + "-" + ld.getMonth() + "-" + ld.getYear() + ":" + ld.getHour() + ":" + ld.getMinute() + ":" + ld.getSecond()  + "\n" );
-		entity.forEach(s->{
+		sb.append("; Asterisk Control sip.cong file, created at " + ld.getDayOfMonth() + "-" + ld.getMonth() + "-"
+				+ ld.getYear() + ":" + ld.getHour() + ":" + ld.getMinute() + ":" + ld.getSecond() + "\n");
+		entity.forEach(s -> {
 			sb.append("[" + s.getPhone() + "](" + config.getSiptemplate() + ")\n");
 			sb.append("permit=" + s.getIpaddress() + "/" + s.getNetmask() + "\n");
 			sb.append("secret=" + s.getPassword() + "\n");
@@ -93,118 +152,134 @@ public class UnitsController extends AbstractController{
 			logger.error(e.getMessage());
 			return "ERROR_CREATE_CONFIG_FILE";
 		}
-	
-		
 	}
-	@RequestMapping(value = { "/dropUnit" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult dropUnit(@RequestBody Units un) {
 
-		if (un.getP() == null) return new ActionResult( "UNIT_NOT_DROPED" );
+	@RequestMapping(value = { "/dropUnit" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult dropUnit(@RequestBody Units un) {
+
+		if (un.getP() == null)
+			return new ActionResult("UNIT_NOT_DROPED");
 		Optional<UnitsEntity> unitOps = unitsRepository.findById(un.getP());
-		
-		if (!unitOps.isPresent()) return new ActionResult( "UNIT_NOT_DROPED" );
-		List<UnitsEntity> units = unitsRepository.findByQ( unitOps.get().getId());
-		if (units.size() > 0) return new ActionResult( "UNIT_NOT_DROPED" );
+
+		if (!unitOps.isPresent())
+			return new ActionResult("UNIT_NOT_DROPED");
+		List<UnitsEntity> units = unitsRepository.findByQ(unitOps.get().getId());
+		if (units.size() > 0)
+			return new ActionResult("UNIT_NOT_DROPED");
 		try {
 			unitsRepository.delete(unitOps.get());
-			return new ActionResult( "UNIT_DROPED" );
-		}catch(Exception e) {
+			return new ActionResult("UNIT_DROPED");
+		} catch (Exception e) {
 			logger.error(e.getMessage());
-			return new ActionResult( "UNIT_NOT_DROPED" );
+			return new ActionResult("UNIT_NOT_DROPED");
 		}
 	}
-	@RequestMapping(value = { "/dropCenter" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult dropCenter(@RequestBody Units un) {
 
-		if (un.getP() == null) return new ActionResult( "UNIT_NOT_DROPED" );
-		List<EquipmentsEntity> equipmentOps = equipmentsRepository.findByP(un.getP() );
-		if (equipmentOps.size() > 0) return new ActionResult( "UNIT_NOT_DROPED" );
+	@RequestMapping(value = { "/dropCenter" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult dropCenter(@RequestBody Units un) {
+
+		if (un.getP() == null)
+			return new ActionResult("UNIT_NOT_DROPED");
+		List<EquipmentsEntity> equipmentOps = equipmentsRepository.findByP(un.getP());
+		if (equipmentOps.size() > 0)
+			return new ActionResult("UNIT_NOT_DROPED");
 		Optional<UnitsEntity> unit = unitsRepository.findById(un.getP());
-		if (!unit.isPresent()) return new ActionResult( "UNIT_NOT_DROPED" );
-		try {		
-			unitsRepository.delete( unit.get() );
-			return new ActionResult( "UNIT_DROPED" );
-		}catch(Exception e) {
+		if (!unit.isPresent())
+			return new ActionResult("UNIT_NOT_DROPED");
+		try {
+			unitsRepository.delete(unit.get());
+			return new ActionResult("UNIT_DROPED");
+		} catch (Exception e) {
 			logger.error(e.getMessage());
-			return new ActionResult( "UNIT_NOT_DROPED" );
+			return new ActionResult("UNIT_NOT_DROPED");
 		}
 	}
-	@RequestMapping(value = { "/findUnit" },method = {RequestMethod.GET})
-	public @ResponseBody Units findUnit( @RequestParam(value="id", required = true)  Long id  ) {
+
+	@RequestMapping(value = { "/findUnit" }, method = { RequestMethod.GET })
+	public @ResponseBody Units findUnit(@RequestParam(value = "id", required = true) Long id) {
 		final Units unit = new Units();
 		Optional<UnitsEntity> entity = unitsRepository.findById(id);
-		entity.ifPresent(en->{
+		entity.ifPresent(en -> {
 			unit.setP(en.getId());
 			unit.setName(en.getUnit());
 			unit.setQ(en.getQ());
 		});
 		return unit;
 	}
-	@RequestMapping(value = { "/findEquipment" },method = {RequestMethod.GET})
-	public @ResponseBody Equipments findEquipment( @RequestParam(value="id", required = true)  Long id  ) {
+
+	@RequestMapping(value = { "/findEquipment" }, method = { RequestMethod.GET })
+	public @ResponseBody Equipments findEquipment(@RequestParam(value = "id", required = true) Long id) {
 		final Equipments equipment = new Equipments();
 		Optional<EquipmentsEntity> entity = equipmentsRepository.findById(id);
-		entity.ifPresent(en->{
-			equipment.setId( en.getId() );
-			equipment.setOffice( en.getOffice() );
-			equipment.setPhone( en.getPhone());
-			equipment.setIpaddress( en.getIpaddress());
-			equipment.setNetmask( en.getNetmask());
-			equipment.setGateway( en.getGateway());
-			equipment.setP( en.getP());
-			equipment.setPassword( en.getPassword());
-			equipment.setPerson( en.getPerson());
+		entity.ifPresent(en -> {
+			equipment.setId(en.getId());
+			equipment.setOffice(en.getOffice());
+			equipment.setPhone(en.getPhone());
+			equipment.setIpaddress(en.getIpaddress());
+			equipment.setNetmask(en.getNetmask());
+			equipment.setGateway(en.getGateway());
+			equipment.setP(en.getP());
+			equipment.setPassword(en.getPassword());
+			equipment.setPerson(en.getPerson());
 		});
 		return equipment;
-	}	
-	@RequestMapping(value = { "/saveUnit" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult saveUnit(@RequestBody Units un) {
-		if (un.getName().length() == 0) return  new ActionResult( "UNIT_NOT_SAVED" );
-	
+	}
+
+	@RequestMapping(value = { "/saveUnit" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult saveUnit(@RequestBody Units un) {
+		if (un.getName().length() == 0)
+			return new ActionResult("UNIT_NOT_SAVED");
+
 		if (un.getP() != null) {
 			try {
 				unitsRepository.updateUnit(un.getName(), un.getP());
-				return new ActionResult( "UNIT_SAVED" );
-			}catch(Exception e) {
+				return new ActionResult("UNIT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "UNIT_NOT_SAVED" );
+				return new ActionResult("UNIT_NOT_SAVED");
 			}
-		}else {
+		} else {
 			UnitsEntity unit = new UnitsEntity();
-			unit.setUnit( un.getName());
-			unit.setQ( Long.valueOf(0) );
+			unit.setUnit(un.getName());
+			unit.setQ(Long.valueOf(0));
+			unit.setPbx(un.getPbx());
 			try {
 				unitsRepository.save(unit);
-				return new ActionResult( "UNIT_SAVED" );
-			}catch(Exception e) {
+				return new ActionResult("UNIT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "UNIT_NOT_SAVED" );
+				return new ActionResult("UNIT_NOT_SAVED");
 			}
 		}
 	}
-	@RequestMapping(value = { "/dropEquipment" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult dropEquipment(@RequestBody Equipments equipment) {
-		if (equipment.getId() == null) return new ActionResult( "EQUIPMENT_NOT_DROPED" );
+
+	@RequestMapping(value = { "/dropEquipment" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult dropEquipment(@RequestBody Equipments equipment) {
+		if (equipment.getId() == null)
+			return new ActionResult("EQUIPMENT_NOT_DROPED");
 		Optional<EquipmentsEntity> eqOpt = equipmentsRepository.findById(equipment.getId());
-		if (!eqOpt.isPresent()) return new ActionResult( "EQUIPMENT_NOT_DROPED" );
+		if (!eqOpt.isPresent())
+			return new ActionResult("EQUIPMENT_NOT_DROPED");
 		try {
-		    equipmentsRepository.delete(eqOpt.get());
-			return new ActionResult( "EQUIPMENT_DROPED" );
-		}catch(Exception e) {
-			return new ActionResult( "EQUIPMENT_NOT_DROPED" );
+			equipmentsRepository.delete(eqOpt.get());
+			return new ActionResult("EQUIPMENT_DROPED");
+		} catch (Exception e) {
+			return new ActionResult("EQUIPMENT_NOT_DROPED");
 		}
 	}
-	@RequestMapping(value = { "/saveEquipment" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult saveEquipment(@RequestBody Equipments eq) {
+
+	@RequestMapping(value = { "/saveEquipment" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult saveEquipment(@RequestBody Equipments eq) {
 		if (eq.getId() != null) {
 			try {
-				equipmentsRepository.updateEquipments(eq.getPhone(),eq.getPassword(),eq.getOffice(), eq.getP(), eq.getIpaddress(), eq.getNetmask(),eq.getGateway(),eq.getPerson(), eq.getId() );
-				return new ActionResult( "EQUIPMENT_SAVED" );
-			}catch(Exception e) {
+				equipmentsRepository.updateEquipments(eq.getPhone(), eq.getPassword(), eq.getOffice(), eq.getP(),
+						eq.getIpaddress(), eq.getNetmask(), eq.getGateway(), eq.getPerson(), eq.getId());
+				return new ActionResult("EQUIPMENT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "EQUIPMENT_NOT_SAVED" );
+				return new ActionResult("EQUIPMENT_NOT_SAVED");
 			}
-		}else {
+		} else {
 			EquipmentsEntity equipment = new EquipmentsEntity();
 			equipment.setPhone(eq.getPhone());
 			equipment.setOffice(eq.getOffice());
@@ -215,96 +290,100 @@ public class UnitsController extends AbstractController{
 			equipment.setPassword(eq.getPassword());
 			equipment.setPerson(eq.getPerson());
 			try {
-				equipmentsRepository.save( equipment );
-				return new ActionResult( "EQUIPMENT_SAVED" );
-			}catch(Exception e) {
+				equipmentsRepository.save(equipment);
+				return new ActionResult("EQUIPMENT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "EQUIPMENT_NOT_SAVED" );
+				return new ActionResult("EQUIPMENT_NOT_SAVED");
 			}
 		}
 	}
-	@RequestMapping(value = { "/saveCenter" },method = {RequestMethod.POST})
-	public @ResponseBody  ActionResult saveCenter(@RequestBody Units un) {
-		if (un.getName().length() == 0) return  new ActionResult( "UNIT_NOT_SAVED" );
-	
+
+	@RequestMapping(value = { "/saveCenter" }, method = { RequestMethod.POST })
+	public @ResponseBody ActionResult saveCenter(@RequestBody Units un) {
+		if (un.getName().length() == 0)
+			return new ActionResult("UNIT_NOT_SAVED");
+
 		if (un.getQ() != null) {
 			try {
 				unitsRepository.updateUnit(un.getName(), un.getP());
-				return new ActionResult( "UNIT_SAVED" );
-			}catch(Exception e) {
+				return new ActionResult("UNIT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "UNIT_NOT_SAVED" );
+				return new ActionResult("UNIT_NOT_SAVED");
 			}
-		}else {
+		} else {
 			UnitsEntity unit = new UnitsEntity();
-			unit.setUnit( un.getName());
-			unit.setQ( un.getP() );
+			unit.setUnit(un.getName());
+			unit.setQ(un.getP());
+			unit.setPbx(un.getPbx());
 			try {
 				unitsRepository.save(unit);
-				return new ActionResult( "UNIT_SAVED" );
-			}catch(Exception e) {
+				return new ActionResult("UNIT_SAVED");
+			} catch (Exception e) {
 				logger.error(e.getMessage());
-				return new ActionResult( "UNIT_NOT_SAVED" );
+				return new ActionResult("UNIT_NOT_SAVED");
 			}
 		}
 	}
-	
-	@RequestMapping(value = { "/showAllUnits" },method = {RequestMethod.GET})
-	public @ResponseBody FSContainer showFSContainer(Model model) {
-		FSContainer rootFS = new FSContainer(new PNameQ(0,"ROOT",0));
+
+	@RequestMapping(value = { "/showAllUnits" }, method = { RequestMethod.GET })
+	public @ResponseBody FSContainer showFSContainer(@RequestParam(value = "pbx", required = true) Long pbx) {
+		FSContainer rootFS = new FSContainer(new PNameQ(0, "ROOT", 0));
 		try {
-			 connect = DriverManager.getConnection( datasourceUrl, username, password );
-			 fillSQL( new Long(0),rootFS);
+			connect = DriverManager.getConnection(datasourceUrl, username, password);
+			fillSQL(Long.valueOf(0), pbx, rootFS);
 		} catch (Exception e) {
 			logger.error(e.getMessage());
-			
+
 		}
 		return rootFS;
-		
+
 	}
-	
-	private void fill(Long p,  FSContainer fs) {
-		List<UnitsEntity> resultSet = unitsRepository.findByQ( new Long(p));
-		resultSet.forEach(rs->{
+
+	private void fill(Long p, FSContainer fs) {
+		List<UnitsEntity> resultSet = unitsRepository.findByQ(new Long(p));
+		resultSet.forEach(rs -> {
 			Long p1 = rs.getId();
-			 FSContainer tempFs = new FSContainer(new PNameQ( p1 ,rs.getUnit(),rs.getQ()));
-			 fs.addContainer(tempFs);
-		     fill(p1,tempFs);
+			FSContainer tempFs = new FSContainer(new PNameQ(p1, rs.getUnit(), rs.getQ()));
+			fs.addContainer(tempFs);
+			fill(p1, tempFs);
 		});
 	}
-	private void fillSQL(Long p,  FSContainer fs) throws SQLException {
-		Statement statement =  connect.createStatement();
-		ResultSet resultSet = statement.executeQuery("select * from units where q=" + p + " order by unit");
+
+	private void fillSQL(Long p, Long pbx, FSContainer fs) throws SQLException {
+		Statement statement = connect.createStatement();
+		ResultSet resultSet = statement
+				.executeQuery("select * from units where q=" + p + " and pbx=" + pbx + " order by unit");
 		while (resultSet.next()) {
-		     long p1 = resultSet.getLong("p");
-		     long q = resultSet.getLong("q");
-		     String unit = resultSet.getString("unit");
+			long p1 = resultSet.getLong("p");
+			long q = resultSet.getLong("q");
+			String unit = resultSet.getString("unit");
 
-		     
-		     PNameQ pnameq = new PNameQ(p1,unit,q);
-		     List<EquipmentsEntity> eqs = equipmentsRepository.findByP(p1);
-		     if (eqs != null && eqs.size() > 0) {
-		    	 eqs.forEach(e->{
-		    		 Equipments equipment = new Equipments();
-		    		 equipment.setId( e.getId() );
-		    		 equipment.setPhone( e.getPhone() );
-		    		 equipment.setIpaddress(e.getIpaddress());
-		    		 equipment.setOffice(e.getOffice());
-		    		 equipment.setNetmask(e.getNetmask());
-		    		 equipment.setGateway(e.getGateway());
-		    		 equipment.setP(e.getP());
-		    		 equipment.setPerson(e.getPerson());
-		    		 equipment.setPassword(e.getPassword());
-		    		 
-		    		 pnameq.addEquipments( equipment );
-		    	 }); 
-		     }
-		     
-		     FSContainer tempFs = new FSContainer( pnameq );
+			PNameQ pnameq = new PNameQ(p1, unit, q);
+			List<EquipmentsEntity> eqs = equipmentsRepository.findByP(p1);
+			if (eqs != null && eqs.size() > 0) {
+				eqs.forEach(e -> {
+					Equipments equipment = new Equipments();
+					equipment.setId(e.getId());
+					equipment.setPhone(e.getPhone());
+					equipment.setIpaddress(e.getIpaddress());
+					equipment.setOffice(e.getOffice());
+					equipment.setNetmask(e.getNetmask());
+					equipment.setGateway(e.getGateway());
+					equipment.setP(e.getP());
+					equipment.setPerson(e.getPerson());
+					equipment.setPassword(e.getPassword());
 
-		     fs.addContainer(tempFs);
-		     fillSQL(p1,tempFs);
-		 }
+					pnameq.addEquipments(equipment);
+				});
+			}
+
+			FSContainer tempFs = new FSContainer(pnameq);
+
+			fs.addContainer(tempFs);
+			fillSQL(p1, pbx, tempFs);
+		}
 		statement.close();
-	}	
+	}
 }
